CentOs: Edit kickstart to ignore eth1 during installation
Signed-off-by: Robert Breker <robert.breker@citrix.com>

--- a/anaconda-ks.cfg
+++ b/anaconda-ks.cfg
@@ -3,6 +3,7 @@ url --url=<install_repository>
 lang en_US.UTF-8
 keyboard us
 network --onboot yes --device eth0 --mtu=1500 --bootproto dhcp
+network --onbot no --device eth1 --botproto dhcp --noipv6
 rootpw  <install_password>
 
 firewall --service=ssh --service==ssh
@@ -34,4 +35,5 @@ wget
 %post
 mount /dev/cdrom /mnt/
 /mnt/Linux/install.sh -n
+umount /mnt/
 %end
